新增对公共、工具类的测试